--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div class="Home">
         <div id="bg-vid">
-        <video autoplay muted loop src="video.mp4"></video>
+        <video autoplay muted loop src="car3.mp4"></video>
         </div>
     </div>
     
